--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-authentication": "^0.3.2",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "mongoose": "^5.0.17",
